hphp/test/slow/parser/hh-reserved-name-string-1.php.expectf
Fatal error: Cannot use 'String' as class name as it is reserved in %s on line 3
